[tool.poetry]
name = "translation_engine"
version = "0.1.0"
description = "BIA-BilingualNet is a flexible and powerful neural network architecture, carefully designed to perform language-to-language translation effectively."
authors = ["Ben alla ismail <ismailbenalla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
matplotlib = "3.8.0"
ipython = "^8.24.0"
torchvision = "^0.18.0"
scikit-learn = "^1.4.2"
streamlit = "^1.34.0"
numpy = "<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-streamlit = "translation_engine.app.main:main"